deploy/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-catalog
spec:
  ingressClassName: nginx
  rules:
    - host: service-catalog.api.staging.fellesdatakatalog.digdir.no
      http:
        paths:
          - backend:
              service:
                name: service-catalog
                port:
                  number: 8080
            path: /
            pathType: Prefix
